--- a/app/assets/stylesheets/themes/venice/mobile.scss
+++ b/app/assets/stylesheets/themes/venice/mobile.scss
@@ -4,7 +4,6 @@ $mobile: "screen and (max-width:899px)";
 /* Layout ------------------------------------------------------------------ */
   .container {
     width: 100%;
-    overflow-x: hidden;
   }
 
   .header {
